crates/velodex-core/src/pypi/tests/snapshots/velodex_core__pypi__tests__simple_tests__detail_html.snap
---
source: crates/velodex-core/src/pypi/tests/simple_tests.rs
expression: render_detail_html(&sample_detail())
---
<!DOCTYPE html>
<html>
  <head>
    <meta name="pypi:repository-version" content="1.1">
    <title>Links for proj&amp;&lt;&gt;</title>
  </head>
  <body>
    <a href="https://files.example/a?b=1&amp;c=2#sha256=aaaa" data-requires-python="&gt;=3.8,&lt;4" data-core-metadata="sha256=bbbb" data-dist-info-metadata="sha256=bbbb">proj&amp;&lt;&gt;-2.0-py3-none-any.whl</a><br />
    <a href="https://files.example/q&quot;uote" data-yanked="broken build" data-core-metadata="true" data-dist-info-metadata="true">proj-1.5.tar.gz</a><br />
    <a href="https://files.example/c.whl#sha256=cccc" data-yanked="">proj-1.0-py3-none-any.whl</a><br />
  </body>
</html>
