crates/velodex-core/src/pypi/tests/snapshots/velodex_core__pypi__tests__simple_tests__detail_json.snap
---
source: crates/velodex-core/src/pypi/tests/simple_tests.rs
expression: to_json(&sample_detail())
---
{"meta":{"api-version":"1.4","project-status":"active","project-status-reason":"available"},"name":"proj&<>","versions":["1.0","2.0"],"files":[{"filename":"proj&<>-2.0-py3-none-any.whl","url":"https://files.example/a?b=1&c=2","hashes":{"sha256":"aaaa"},"requires-python":">=3.8,<4","size":1234,"upload-time":"2024-03-24T00:00:00.000000Z","yanked":false,"core-metadata":{"sha256":"bbbb"},"dist-info-metadata":{"sha256":"bbbb"},"gpg-sig":true,"provenance":"https://files.example/a.provenance"},{"filename":"proj-1.5.tar.gz","url":"https://files.example/q\"uote","hashes":{},"yanked":"broken build","core-metadata":true,"dist-info-metadata":true,"gpg-sig":false},{"filename":"proj-1.0-py3-none-any.whl","url":"https://files.example/c.whl","hashes":{"sha256":"cccc"},"size":9,"yanked":true,"core-metadata":false,"provenance":null}]}
