crates/velodex-core/src/pypi/tests/snapshots/velodex_core__pypi__tests__simple_tests__index_json.snap
---
source: crates/velodex-core/src/pypi/tests/simple_tests.rs
expression: to_json(&sample_list())
---
{"meta":{"api-version":"1.1"},"projects":[{"name":"Flask"},{"name":"zope.interface"},{"name":"a&<>"}]}
